--- a/W7/W7D2/helpers_layouts_partials/app/views/cats/edit.html.erb
+++ b/W7/W7D2/helpers_layouts_partials/app/views/cats/edit.html.erb
@@ -3,3 +3,9 @@
   <%= render 'shared/errors' %>
   <%= render 'form', cat: @cat %>
 </div></section>
+
+<p>Other content for the cats edit goes here</p>
+
+<% content_for :footer do %>
+  <p>This is the cats edit page.</p>
+<% end %>
